# research-agent

./: .dockerignore  .env.example  .gitignore  DOC_GUIDE.md  Dockerfile  LICENSE  README.md  README_EN.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  searxng-settings.yml  server.py
.github/workflows/: ci.yml
docs/: prelaunch-review.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: baseUrl.js  index.js  sse.js
frontend/src/components/: ThemeToggle.vue
frontend/src/i18n/: LanguageSwitcher.vue  index.js
frontend/src/router/: index.js
frontend/src/stores/: research.js  researchTaskHelpers.js
frontend/src/views/: FollowupView.vue  HistoryView.vue  HomeView.vue  LoginView.vue  ProgressView.vue  ReportView.vue  ReviewView.vue  SettingsView.vue  SyncView.vue
frontend/tests/: apiBaseUrl.test.js  researchTaskHelpers.test.js  sseClient.test.js
src/: __init__.py
src/auth/: __init__.py  jwt_auth.py  user_db.py
src/config/: __init__.py  config_manager.py  settings.py
src/crawler/: __init__.py  concurrency.py  web_crawler.py
src/llm/: __init__.py  circuit_breaker.py
src/logging/: __init__.py  audit.py
src/report/: report_generator.py
src/schema/: __init__.py  state.py
src/security/: __init__.py  url_validation.py
src/storage/: __init__.py  database.py
src/sync/: __init__.py  feishu_sync.py  tencent_sync.py
src/tools/: __init__.py  comparison_tool.py  export.py  followup_optimizer.py  multi_role_reviewer.py  prd_generator.py  quality_scorer.py  report_comparator.py  search_tool.py
src/workflow/: __init__.py  mvp_workflow.py  task_store.py
tests/: conftest.py  test_llm_circuit_breaker.py  test_research_depth.py  test_security_baseline.py  test_task_queue.py
tests/e2e/: conftest.py  test_research_flow.py
(+2 files in other folders)
