[project]
name = "research-agent"
version = "1.0.0"
description = "AI-powered Competitive Research Agent with PRD Generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.3",
    "fastapi==0.136.1",
    "openai==2.37.0",
    "playwright==1.59.0",
    "pydantic==2.13.4",
    "pypdf==6.11.0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "structlog==25.5.0",
    "uvicorn==0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[project.scripts]
research-agent = "main:main"
research-server = "server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
