[project]
name = "research-agent"
version = "1.0.0"
description = "AI-powered Competitive Research Agent with PRD Generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.3",
    "fastapi==0.136.1",
    "openai==2.37.0",
    "playwright==1.59.0",
    "pydantic==2.13.4",
    "pypdf==6.11.0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "weasyprint>=57.0",
    "markdown>=3.7",
    "redis[hiredis]>=5.0.0",
    "aiosqlite>=0.20.0",
    "psutil>=5.9.0",
    "requests==2.34.2",
    "slowapi>=0.1.9",
    "structlog==25.5.0",
    "uvicorn==0.47.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
]

[project.scripts]
research-agent = "main:main"
research-server = "server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
